# xaipneumonia

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yaml
experiments/: CNN_Test.ipynb  shap_experiment.ipynb  test.ipynb
frontend/: app.py
pipelines/: data_pipeline.py
src/: __init__.py  log.py  settings.py
src/base/: config_entity.py  xai_entity.py
src/constants/: __init__.py
src/utils/: commons.py  configuration.py  img_utils.py  plots.py
steps/: evaluation.py  gradcam_explanation.py  gradientshap_explanation.py  inference.py  ingest_data.py  ingestion.py  lime_explanation.py  preprocess_input.py  preprocessing.py  shap_explanation.py  train_model.py
