[project]
name = "src"
version = "0.1.0"
description = "Explainable pneumonia Xray classification"
authors = [
    {name = "desire SOUSSOU",email = "soussoudesire2019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
keywords = ["explainable AI", "pneumonia", "xray", "classification"]


dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "tensorflow (>=2.14.0,<3.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "zenml[server] (>=0.82.0,<0.83.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.34.0"

