[project]
name = "src"
version = "0.1.0"
description = "Explainable pneumonia Xray classification"
authors = [
    {name = "desire SOUSSOU",email = "soussoudesire2019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
keywords = ["explainable AI", "pneumonia", "xray", "classification"]


dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "zenml[server] (>=0.82.0,<0.83.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ensure (>=1.0.4,<2.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.34.0"

