[project]
name = "src"
version = "0.1.0"
description = "Explainable pneumonia Xray classification"
authors = [
    {name = "desire SOUSSOU",email = "soussoudesire2019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
keywords = ["explainable AI", "pneumonia", "xray", "classification"]


dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "zenml[server] (>=0.82.0,<0.83.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ensure (>=1.0.4,<2.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pydot (>=4.0.0,<5.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "scikit-learn (==1.3)",
    "numpy (>=1.26,<2.0)",
    "shap (>=0.47.2,<0.48.0)",
    "dash (>=3.0.4,<4.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.34.0"

[tool.poe.tasks]

test = "echo hello world"
